# nzmstow

./: README.md  pyproject.toml
src/nzmstow/: __init__.py  __main__.py  entry.py  lib.py
src/nzmstow/ignore/: __init__.py  glob.py  lib.py
