[project]
name = "nzmstow"
version = "0.17.5"
description = "Miyamori's simple GNU Stow imitation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
    {email = "inspc43313@yahoo.co.jp"},
    {name = "Nozomi Miyamori"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[project.urls]
repository = "https://github.com/nm004/nzmstow"

[project.scripts]
nzmstow = "nzmstow:__main__.main"
